fix: :bug: Corrigindo importacoes de fonte, contraste e layoput shifts

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -26,7 +26,16 @@ footer {
 
     div {
         display: flex;
+        max-width: 1200px;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
         gap: 2rem;
+
+        a {
+            max-width: 2rem;
+            width: 100%;
+        }
         
         i {
             font-size: 2rem;
