--- a/src/pages/main/main.scss
+++ b/src/pages/main/main.scss
@@ -407,7 +407,7 @@ main {
             gap: 1rem;
             font-size: 1.2rem;
             margin: 2rem 0;
-            background-color: darken($green80, 10%);
+            background-color: darken($green80, 15%);
             color: $white100;
             box-shadow: 0 10px 10px $black10;
             cursor: pointer;
